--- a/style.css
+++ b/style.css
@@ -75,3 +75,11 @@ body {
 #equals {
   background-color: #215fbb;
 }
+
+@media only screen and (max-width: 767px) {
+  .window {
+    border-radius: 0;
+    height: 100%;
+    width: 100%;
+  }
+}
