--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0 1rem 0;
 }
 
 .buttonsAndWindow {
@@ -79,6 +80,7 @@ body {
 @media only screen and (max-width: 767px) {
   .window {
     border-radius: 0;
+    box-shadow: 0;
     height: 100%;
     width: 100%;
   }
